src/libmem/libmem.h


/* Primitive types */
typedef void     lm_void_t;

typedef enum {
	LM_FALSE = 0,
	LM_TRUE = 1
}  lm_bool_t;

typedef uint8_t   lm_byte_t;

typedef uintptr_t lm_address_t;

typedef size_t    lm_size_t;

typedef const lm_char_t *lm_string_t;

typedef const lm_byte_t *lm_bytearray_t;


/* OS primitive types */
typedef uint32_t lm_pid_t;

typedef uint32_t lm_prot_t;


typedef struct {
	lm_pid_t  pid;
	lm_pid_t  ppid;
	lm_size_t bits;
	lm_time_t start_time; /* Process start timestamp, in milliseconds since last boot */
	lm_char_t path[LM_PATH_MAX];
	lm_char_t name[LM_PATH_MAX];
} lm_process_t;


typedef struct {
	lm_tid_t tid;
	lm_pid_t owner_pid;
} lm_thread_t;


typedef struct {
	lm_address_t base;
	lm_address_t end;
	lm_size_t    size;
	lm_char_t    path[LM_PATH_MAX];
	lm_char_t    name[LM_PATH_MAX];
} lm_module_t;


/* An allocated segment of memory */
typedef struct {
	lm_address_t base;
	lm_address_t end;
	lm_size_t    size;
	lm_prot_t    prot;
} lm_segment_t;


typedef struct {
	lm_string_t  name;
	lm_address_t address;
} lm_symbol_t;


/*
 * API guidelines
 *
 * 1.  User facing functions should return when receiving bad parameters.
 *
 * 2.  Internal functions should 'assert' to check for bad parameters.
 *
 * 3.  Immutable struct pointers should be 'const'.
 *
 * 4.  Immutable strings should be 'lm_string_t'.
 *
 * 5.  Output variable pointers in functions should be at the end, unless
 *     it doesn't make sense to put it there (for example, when there is
 *     a size parameter after a mutable buffer).
 *
 * 6.  All user facing functions should have the 'LM_API' prefix for
 *     automatic importing and exporting.
 *
 * 7.  All user facing callables should have the 'LM_CALL' infix to ensure 
 *     that the calling convention for all callables is the same.
 *     This includes callbacks.
 *
 * 8.  Functions that run callbacks should have an 'lm_void_t *arg' argument
 *     so that the caller can pass values into the callback without globals
 *     or hacks.
 *
 * 9.  All user facing functions should have the 'LM_' prefix before their name,
 *     and after that, they should be PascalCase.
 *
 * 10. All user facing types should have the 'lm_' prefix before their name.
 *     After that, they should be snake_case, and also end with '_t'.
 *
 * 11. Exclusively output arguments in functions should have the '_out' suffix.
 */

/* Process API */
LM_API lm_bool_t LM_CALL
LM_EnumProcesses(lm_bool_t (LM_CALL *callback)(lm_process_t *process,
					       lm_void_t    *arg),
		 lm_void_t          *arg);


LM_API lm_bool_t LM_CALL
LM_GetProcess(lm_process_t *process_out);


LM_API lm_bool_t LM_CALL
LM_GetProcessEx(lm_pid_t      pid,
		lm_process_t *process_out);


LM_API lm_bool_t LM_CALL
LM_FindProcess(lm_string_t   process_name,
	       lm_process_t *process_out);


LM_API lm_bool_t LM_CALL
LM_IsProcessAlive( lm_process_t *process);


LM_API lm_size_t LM_CALL
LM_GetBits();


LM_API lm_size_t LM_CALL
LM_GetSystemBits(lm_void_t);


/* Thread API */
LM_API lm_bool_t LM_CALL
LM_EnumThreads(lm_bool_t (LM_CALL *callback)(lm_thread_t *thread,
					     lm_void_t   *arg),
	       lm_void_t          *arg);


LM_API lm_bool_t LM_CALL
LM_EnumThreadsEx( lm_process_t *process,
		 lm_bool_t (LM_CALL *callback)(lm_thread_t *thread,
					       lm_void_t   *arg),
		 lm_void_t          *arg);


LM_API lm_bool_t LM_CALL
LM_GetThread(lm_thread_t *thread_out);


LM_API lm_bool_t LM_CALL
LM_GetThreadEx( lm_process_t *process,
	       lm_thread_t        *thread_out);


LM_API lm_bool_t LM_CALL
LM_GetThreadProcess( lm_thread_t *thread,
		    lm_process_t      *process_out);


/* Module API */
LM_API lm_bool_t LM_CALL
LM_EnumModules(lm_bool_t (LM_CALL *callback)(lm_module_t *module,
					     lm_void_t   *arg),
	       lm_void_t          *arg);


LM_API lm_bool_t LM_CALL
LM_EnumModulesEx( lm_process_t *process,
		 lm_bool_t (LM_CALL *callback)(lm_module_t *module,
					       lm_void_t   *arg),
		 lm_void_t          *arg);


LM_API lm_bool_t LM_CALL
LM_FindModule(lm_string_t  name,
	      lm_module_t *module_out);


LM_API lm_bool_t LM_CALL
LM_FindModuleEx( lm_process_t *process,
		lm_string_t         name,
		lm_module_t        *module_out);


LM_API lm_bool_t LM_CALL
LM_LoadModule(lm_string_t  path,
	      lm_module_t *module_out);


LM_API lm_bool_t LM_CALL
LM_LoadModuleEx( lm_process_t *process,
		lm_string_t         path,
		lm_module_t        *module_out);


LM_API lm_bool_t LM_CALL
LM_UnloadModule( lm_module_t *module);


LM_API lm_bool_t LM_CALL
LM_UnloadModuleEx( lm_process_t *process,
		  const lm_module_t  *module);


/* Symbol API */
LM_API lm_bool_t LM_CALL
LM_EnumSymbols( lm_module_t  *module,
	       lm_bool_t (LM_CALL *callback)(lm_symbol_t *symbol,
					     lm_void_t   *arg),
	       lm_void_t          *arg);


LM_API lm_address_t LM_CALL
LM_FindSymbolAddress( lm_module_t *module,
		     lm_string_t        symbol_name);


LM_API lm_bool_t LM_CALL
LM_EnumSymbolsDemangled( lm_module_t  *module,
			lm_bool_t (LM_CALL *callback)(lm_symbol_t *symbol,
						      lm_void_t   *arg),
			lm_void_t          *arg);


/* Segment API */
LM_API lm_bool_t LM_CALL
LM_EnumSegments(lm_bool_t (LM_CALL *callback)(lm_segment_t *segment,
                			      lm_void_t    *arg),
		lm_void_t          *arg);


LM_API lm_bool_t LM_CALL
LM_EnumSegmentsEx( lm_process_t *process,
                  lm_bool_t (LM_CALL *callback)(lm_segment_t *segment,
						lm_void_t    *arg),
		  lm_void_t          *arg);


LM_API lm_bool_t LM_CALL
LM_FindSegment(lm_address_t  address,
	       lm_segment_t *segment_out);


LM_API lm_bool_t LM_CALL
LM_FindSegmentEx( lm_process_t *process,
		 lm_address_t        address,
		 lm_segment_t       *segment_out);


/* Memory API */

/*
 * NOTE: Memory allocation/protection/free functions are page aligned
 *
 * NOTE: In LM_ProtMemory(Ex), the `oldprot_out` parameter contains the
 *       old protection of the first page of the whole region, which is
 *       enough for most cases. You should pick the old protections yourself
 *       with LM_FindSegments(Ex) in case of a multi-segment memory protection.
 */

LM_API lm_size_t LM_CALL
LM_ReadMemory(lm_address_t source,
	      lm_byte_t   *dest,
	      lm_size_t    size);


LM_API lm_size_t LM_CALL
LM_ReadMemoryEx( lm_process_t *process,
		lm_address_t        source,
		lm_byte_t          *dest,
		lm_size_t           size);


LM_API lm_size_t LM_CALL
LM_WriteMemory(lm_address_t   dest,
	       lm_bytearray_t source,
	       lm_size_t      size);


LM_API lm_bool_t LM_CALL
LM_ProtMemory(lm_address_t address,
	      lm_size_t    size,
	      lm_prot_t    prot,
	      lm_prot_t   *oldprot_out);


LM_API lm_bool_t LM_CALL
LM_ProtMemoryEx( lm_process_t *process,
		lm_address_t        address,
		lm_size_t           size,
		lm_prot_t           prot,
		lm_prot_t          *oldprot_out);