src/nimlibmem.nim

import os, nimpy, typetraits

pyExportModule("_libmem")

type
  cstr* = distinct array[4096, char]

converter stringtToCstring*(x: cstr): cstring = cast[cstring]((distinctBase(cstr)x)[0].addr)

proc cb[T](c: ptr T; arg: pointer): bool {.cdecl.} =
  cast[ptr seq[T]](arg)[].add(c[])
  result = true

const
  Protnone* = uint32(0)
  Protr* = uint32(1)
  Protw* = uint32(2)
  Protx* = uint32(4)
  Protxr* = uint32(5)
  Protxw* = uint32(6)
  Protrw* = uint32(3)
  Protxrw* = uint32(7)
  Archarm* = uint32(0)
  Archarm64* = uint32(1)
  Archmips* = uint32(2)
  Archx86* = uint32(3)
  Archppc* = uint32(4)
  Archsparc* = uint32(5)
  Archsysz* = uint32(6)
  Archevm* = uint32(7)
  Archmax* = uint32(8)



type
  memoryaddress* = uintptr
  uintptr* = culonglong
  size* = csize_t
  char* = cchar
  str* = cstring
  bytearray* = ptr byte
  pid* = uint32
  tid* = uint32
  time* = uint64
  prot* = uint32
  structprocess* {.pure, inheritable, bycopy.} = object
    pid*: uint32
    ppid*: uint32
    bits*: csize_t
    startime*: uint64
    path*: cstr
    name*: cstr
  Process* = structprocess
  structhread* {.pure, inheritable, bycopy.} = object
    tid*: uint32
    ownerpid*: uint32
  Thread* = structhread
  structmodule* {.pure, inheritable, bycopy.} = object
    base*: memoryaddress
    endfield*: memoryaddress
    size*: csize_t
    path*: cstr
    name*: cstr
  Module* = structmodule
  structsegment* {.pure, inheritable, bycopy.} = object
    base*: memoryaddress
    endfield*: memoryaddress
    size*: csize_t
    prot*: prot
  Segment* = structsegment
  structsymbol* {.pure, inheritable, bycopy.} = object
    name*: str
    memoryaddress*: memoryaddress
  Symbol* = structsymbol
  structinst* {.pure, inheritable, bycopy.} = object
    memoryaddress*: memoryaddress
    size*: csize_t
    bytes*: array[16'i64, byte]
    mnemonic*: array[32'i64, char]
    opstr*: array[160'i64, char]
  Instruction* = structinst
  archt* = uint32
  structvmtentry* {.pure, inheritable, bycopy.} = object
    origfunc*: memoryaddress
    index*: csize_t
    next*: ptr structvmtentry
  vmtentry* = structvmtentry
  structvmt* {.pure, inheritable, bycopy.} = object
    vtable*: ptr memoryaddress
    hkentries*: ptr vmtentry
  Vmt* = structvmt    



proc enumprocessesoriginal(callback: proc (a0: ptr Process; a1: pointer): bool {.cdecl.}; arg: pointer): bool {.cdecl, importc: "LM_EnumProcesses".}
proc enumprocesses*(): seq[Process] {.exportpy: "enumprocesses".} = discard enumprocessesoriginal(cb, result.addr)

proc getprocessoriginal(processout: ptr Process): bool {.cdecl, importc: "LM_GetProcess".}
proc getprocess*(): Process {.exportpy: "getprocess".} = discard getprocessoriginal(result.addr)

proc getprocessexoriginal(pid: uint32; processout: ptr Process): bool {.cdecl, importc: "LM_GetProcessEx".}
proc getprocessex*(pid: uint32): Process {.exportpy: "getprocessex".} = discard getprocessexoriginal(pid, result.addr)

proc findprocessoriginal(processname: cstring; processout: ptr Process): bool {.cdecl, importc: "LM_FindProcess".}
proc findprocess*(processname: string): Process {.exportpy.} = discard findprocessoriginal(processname, result.addr)

proc isprocessaliveorig(process: ptr Process): bool {.cdecl, importc: "LM_IsProcessAlive".}
proc isprocessalive*(pid: uint32): bool {.exportpy.} = (var process = getprocessex(pid); return isprocessaliveorig(process.addr).bool)

proc getbitsoriginal(): csize_t {.cdecl, importc: "LM_GetBits".}
proc getbits*(): uint64 {.exportpy.} = return cast[uint64](getbitsoriginal())

proc getsystembitsoriginal(): csize_t {.cdecl, importc: "LM_GetSystemBits".}
proc getsystembits*(): uint64 {.exportpy.} = return cast[uint64](getsystembitsoriginal())

proc enumthreadsoriginal(callback: proc (a0: ptr Thread; a1: pointer): bool {.cdecl.}; arg: pointer): bool {.cdecl, importc: "LM_EnumThreads".}
proc enumthreads*(): seq[Thread] {.exportpy.} = discard enumthreadsoriginal(cb, result.addr)

proc enumthreadsexoriginal(process: ptr Process; callback: proc (a0: ptr Thread;a1: pointer): bool {.cdecl.}; arg: pointer): bool {.cdecl, importc: "LM_EnumThreadsEx".}
proc enumthreadsex*(pid: uint32): seq[Thread] {.exportpy.} = (var process = getprocessex(pid); discard enumthreadsexoriginal(process.addr, cb, result.addr))

proc getthreadoriginal(threadout: ptr Thread): bool {.cdecl, importc: "LM_GetThread".}
proc getthread*(): Thread {.exportpy.} = discard getthreadoriginal(result.addr)

proc getthreadexoriginal(process: ptr Process; threadout: ptr Thread): bool {.cdecl, importc: "LM_GetThreadEx".}
proc getthreadex*(pid: uint32): Thread {.exportpy.} = (var process = getprocessex(pid); discard getthreadexoriginal(process.addr, result.addr))

proc getthreadprocessoriginal(thread: ptr Thread; processout: ptr Process): bool {.cdecl, importc: "LM_GetThreadProcess".}
proc getthreadprocess*(thread: Thread): Process {.exportpy.} = discard getthreadprocessoriginal(thread.addr, result.addr)

proc enummodulesoriginal(callback: proc (a0: ptr Module; a1: pointer): bool {.cdecl.}; arg: pointer): bool {.cdecl, importc: "LM_EnumModules".}
proc enummodules*(): seq[Module] {.exportpy.} = discard enummodulesoriginal(cb, result.addr)

proc enummodulesexoriginal(process: ptr Process; callback: proc (a0: ptr Module;a1: pointer): bool {.cdecl.}; arg: pointer): bool {.cdecl, importc: "LM_EnumModulesEx".}
proc enummodulesex*(pid: uint32): seq[Module] {.exportpy.} = (var process = getprocessex(pid); discard enummodulesexoriginal(process.addr, cb, result.addr))

proc findmoduleoriginal(name: cstring; moduleout: ptr Module): bool {.cdecl, importc: "LM_FindModule".}
proc findmodule*(name: string): Module {.exportpy.} = discard findmoduleoriginal(name, result.addr)

proc findmoduleexoriginal(process: ptr Process; name: cstring;moduleout: ptr Module): bool {.cdecl, importc: "LM_FindModuleEx".}
proc findmoduleex*(pid: uint32; name: string): Module {.exportpy.} = (var process = getprocessex(pid); discard findmoduleexoriginal(process.addr, name, result.addr))

proc loadmoduleoriginal(path: cstring; moduleout: ptr Module): bool {.cdecl, importc: "LM_LoadModule".}
proc loadmodule*(path: string): Module {.exportpy.} = (var m: Module; discard loadmoduleoriginal(path.cstring, m.addr); return m)

proc loadmoduleexoriginal(process: ptr Process; path:cstring;moduleout: ptr Module): bool {.cdecl, importc: "LM_LoadModuleEx".}
proc loadmoduleex*(pid: uint32; path: string): Module {.exportpy.} = (var p: Process = getprocessex(pid); discard loadmoduleexoriginal(p.addr, cast[cstring](path), result.addr))

proc unloadmoduleoriginal(module: ptr Module): bool {.cdecl, importc: "LM_UnloadModule".}
proc unloadmodule*(modulename: string): bool {.exportpy.} = (var module = findmodule(modulename); return unloadmoduleoriginal(module.addr))

proc unloadmoduleexoriginal(process: ptr Process; module: ptr Module): bool {.cdecl, importc: "LM_UnloadModuleEx".}
proc unloadmoduleex*(pid: uint32; modulename: string): bool {.exportpy.} = (var process: Process = getprocessex(pid); var module = findmoduleex(pid, modulename); return unloadmoduleexoriginal(process.addr, module.addr))

proc enumsymbolsoriginal(module: ptr Module; callback: proc (a0: ptr Symbol;a1: pointer): bool {.cdecl.}; arg: pointer): bool {.cdecl, importc: "LM_EnumSymbols".}
proc enumsymbols*(modulename: string): seq[Symbol] {.exportpy.} = (var module = findmodule(modulename); discard enumsymbolsoriginal(module.addr, cb, result.addr))

proc findsymboladdressoriginal(module: ptr Module; symbolname: cstring): memoryaddress {.cdecl, importc: "LM_FindSymbolAddress".}
proc findsymboladdress*(modulename: string; symbolname: string): memoryaddress {.exportpy.} = (var module = findmodule(modulename); return findsymboladdressoriginal(module.addr, symbolname))

proc enumsegmentsoriginal(callback: proc (a0: ptr Segment; a1: pointer): bool {.cdecl.}; arg: pointer): bool {.cdecl, importc: "LM_EnumSegments".}
proc enumsegments*(): seq[Segment] {.exportpy.} = discard enumsegmentsoriginal(cb, result.addr)

proc enumsegmentsexoriginal(process: ptr Process; callback: proc (a0: ptr Segment; a1: pointer): bool {.cdecl.}; arg: pointer): bool {.cdecl, importc: "LM_EnumSegmentsEx".}
proc enumsegmentsex*(pid: uint32): seq[Segment] {.exportpy.} = (var process = getprocessex(pid); discard enumsegmentsexoriginal(process.addr, cb, result.addr))

proc findsegmentoriginal(address: memoryaddress; segmentout: ptr Segment): bool {.cdecl, importc: "LM_FindSegment".}
proc findsegment*(address: memoryaddress): Segment {.exportpy.} = discard findsegmentoriginal(address, result.addr)

proc findsegmentexoriginal(process: ptr Process; address: memoryaddress;segmentout: ptr Segment): bool {.cdecl, importc: "LM_FindSegmentEx".}
proc findsegmentex*(pid: uint32; address: memoryaddress): Segment {.exportpy.} = (var process = getprocessex(pid); discard findsegmentexoriginal(process.addr, address, result.addr))

proc protmemoryoriginal(address: memoryaddress; size: csize_t; prot: prot;oldprotout: ptr prot): bool {.cdecl, importc: "LM_ProtMemory".}
proc protmemory*(address: memoryaddress; size: csize_t; prot: prot): bool {.exportpy.} = return protmemoryoriginal(address, size, prot, nil)

proc protmemoryexoriginal(process: ptr Process; address: memoryaddress; size: csize_t;prot: prot; oldprotout: ptr prot): bool {.cdecl, importc: "LM_ProtMemoryEx".}
proc protmemoryex*(pid: uint32; address: memoryaddress; size: csize_t; prot: prot): bool {.exportpy.} = (var process = getprocessex(pid); return protmemoryexoriginal(process.addr, address, size, prot, nil))

proc readmemoryoriginal(source: memoryaddress; dest: ptr byte; size: csize_t): csize_t {.cdecl, importc: "LM_ReadMemory".}
proc readmemory*(source: memoryaddress; size: csize_t): seq[byte] {.exportpy.} = (var dest = newSeq[byte](size); discard readmemoryoriginal(source, dest[0].addr, size); return dest)

proc readmemoryexoriginal(process: ptr Process; source: memoryaddress;dest: ptr byte; size: csize_t): csize_t {.cdecl, importc: "LM_ReadMemoryEx".}
proc readmemoryex*(pid: uint32; source: memoryaddress; size: csize_t): seq[byte] {.exportpy.} = (var process = getprocessex(pid); var dest = newSeq[byte](size); discard readmemoryexoriginal(process.addr, source, dest[0].addr, size); return dest)

proc writememoryoriginal(dest: memoryaddress; source: bytearray; size: csize_t): csize_t {.cdecl, importc: "LM_WriteMemory".}
proc writeMemory*[T](dest: memoryaddress; data: T): bool =
  ## Writes memory safely and reports errors distinctly.
  try:
    if not protmemory(dest, sizeof(T).csize_t, ProtXRW):
      raise newException(Exception, "Memory protection setting failed.")
    var bytesWritten: csize_t
    when T is typeof(SomeInteger):
      bytesWritten = writememoryoriginal(dest, cast[ptr byte](addr data), sizeof(T).csize_t)
    else:
      bytesWritten = writememoryoriginal(dest, cast[ptr byte](addr data[0]), sizeof(T).csize_t)
    if bytesWritten != sizeof(T).csize_t:
      raise newException(Exception, "Incomplete write operation.")
    true
  except Exception as e:
    echo "Failed to write memory: ", e.msg
    false
